Updated copyright and documentation.